# rogueos

./: .gitignore  COMMERCIAL.md  Cargo.toml  DESIGN.md  LICENSE  Makefile  README.md  ROADMAP.md  VISION.md  claude  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
apps/: README.md
apps/rogue-clip/src/: clipboard_main.rs  main.rs
apps/rogue-lock/: Cargo.toml
apps/rogue-lock/src/: main.rs
apps/rogue-shot/: Cargo.toml  LICENSE
boot/: Cargo.toml
boot/src/: main.rs
buildhall/: all.sh  build.sh  esp_disk.sh  esp_hash_kernel.sh  iso.sh  qemu.sh  validate_runtime.sh
c-sdk/: Makefile
c-sdk/examples/: hello.c
c-sdk/include/: kingdom.h  kwm.h  rogueos.h
c-sdk/linux/: kwm_linux.c
c-sdk/src/: crt0.S  libk.c
docs/: README.md  arch-display-stack.md  arch-paging.md  arch-scheduling.md  build-status.md  cogman.md  design-display-evolution.md  design-paging-evolution.md  design-rogue-desktop-integration.md  design-smp-and-threads.md  dev-notes.md  gui-roadmap.md  ipc.md  os-status.md  reboot_persistence_50_manual.md  rogueos-full-brief.md  status-summary.md  syscall-abi.md  userland-display-host.md  validation_checklist.md  wm-uimap.md
kernel/: Cargo.toml  bin_entry.rs  build.rs  kernel.rs  lib.rs  linker.ld  linker_multiboot2.ld
kernel/.cargo/: config.toml
kernel/arch/: mod.rs
kernel/arch/x86_64/: BOOT_MULTIBOOT2.md  boot_multiboot2.S  cpuid.rs  debug_regs.rs  exceptions.rs  gdt.rs  idt.rs  mod.rs  msr.rs  multiboot2_parser.rs  perf.rs  port.rs  ps2.rs  serial.rs  sme.rs  syscall_entry.rs  tss.rs
kernel/capability/: journal.rs  mod.rs
kernel/display/: mod.rs
kernel/display/compositor/: mod.rs
kernel/display/display_server/: DESIGN.md  mod.rs
kernel/drivers/: DESIGN.md  framebuffer.rs  hid_stub.rs  input.rs  mod.rs  nvme.rs  traits.rs  tty.rs
kernel/drivers/usb/: mod.rs  pci.rs  xhci.rs
kernel/fs/: DESIGN.md  mod.rs  simple_fs.rs  vfs.rs
kernel/iflow/: mod.rs
kernel/init/: diagnostic.rs  main.rs  mod.rs  panic.rs  programs.rs
kernel/init/.cargo/: config.toml
kernel/memory/: DESIGN.md  mod.rs
kernel/memory/debug/: mod.rs  page_walk.rs  stats.rs
kernel/memory/heap/: allocator.rs  cache.rs  kmalloc.rs  mod.rs  slab.rs
kernel/memory/paging/: fault.rs  flags.rs  levels.rs  mapper.rs  mod.rs  page_table.rs  tlb.rs
kernel/memory/physical/: buddy.rs  frame_allocator.rs  layout.rs  memmap.rs  mod.rs  region.rs
kernel/memory/slab/: mod.rs
kernel/memory/virtual/: address_space.rs  mapping.rs  mod.rs  region.rs
kernel/process/: DESIGN.md  ipc.rs  lifecycle.rs  mod.rs  pid.rs  process.rs
kernel/process/context/: mod.rs
kernel/process/debug/: mod.rs
kernel/process/loader/: elf.rs  mod.rs
kernel/process/scheduler/: eevdf.rs  mod.rs  runqueue.rs
kernel/syscall/: ABI.md  DESIGN.md  mod.rs  user_ptr.rs
kernel/syscall/dispatcher/: capability.rs  debug.rs  gfx.rs  iflow.rs  io.rs  ipc.rs  misc.rs  mmap.rs  mod.rs  perf.rs  process.rs
lib/: Cargo.toml
lib/src/: lib.rs
reference/: README.md
reference/desktop-docs/: testing-xephyr.md  xorg-build.md
reference/dwm-rs/: Cargo.toml
reference/dwm-rs-desktop/: Cargo.toml
reference/dwm-rs-desktop/src/: main.rs
reference/dwm-rs/tests/: display_server_integration.rs
reference/dwm-src-c/: README.md
roguewm/src/: lib.rs  main.rs
roguewm/src/compositor/: handlers.rs  mod.rs  state.rs  window.rs  winit.rs
roguewm/src/layout/: tiling.rs
roguewm/src/legacy_x11/: main.rs
roguewm/src/legacy_x11/roguewm/: config.rs
roguewm/src/legacy_x11/roguewm/actions/: client.rs  focus.rs
roguewm/src/legacy_x11/roguewm/bar/: init.rs  input.rs  mod.rs
roguewm/src/legacy_x11/roguewm/handlers/: mod.rs  window.rs
roguewm/src/legacy_x11/roguewm/layouts/: monocle.rs
roguewm/src/legacy_x11/roguewm/manager/: control.rs  helpers.rs
roguewm/src/legacy_x11/roguewm/monitor/: mod.rs
roguewm/src/manager/: mod.rs  plugin.rs
roguewm/src/manager/actions/: general.rs  layout.rs  mod.rs
roguewm/src/manager/atoms/: mod.rs
roguewm/src/manager/bar/: draw.rs
roguewm/src/manager/client/: mod.rs
roguewm/src/manager/cursors/: mod.rs
roguewm/src/manager/handlers/: keyboard.rs  mouse.rs
roguewm/src/manager/layouts/: dwindle.rs  geometry.rs  mod.rs  tile.rs
roguewm/src/manager/manager/: mod.rs  state.rs
roguewm/src/manager/plugins/: scratchpad.rs
roguewm/src/manager/rule_matching/: mod.rs
scripts/: boot_50_metrics.sh  boot_stress.sh  build_grub_iso.sh  build_kernel.sh  build_os.sh  demo_flow.md  mkiso.sh  run_demo_10x.sh  run_display_stack.sh  run_qemu.sh  run_qemu_demo.sh  run_qemu_grub.sh  run_qemu_gtk.sh  run_qemu_idle_8h.sh  run_qemu_iso.sh  run_uefi.sh  run_virtualbox.sh  test_all_rust.sh  test_production.sh  test_qemu_serial.sh  test_qemu_serial_grub.sh  verify_build.sh
trash/: README.md
userland/: Cargo.toml  DESIGN.md  build.rs  linker.ld
userland/.cargo/: config.toml
userland/compositor/: Cargo.toml
userland/compositor/src/: lib.rs
userland/core/: Cargo.toml
userland/core/src/: backend.rs  config.rs  lib.rs
userland/kapp/: Cargo.toml
userland/kapp/src/: lib.rs
userland/ldscripts/: cogman.ld  copy.ld  editor.ld  exit.ld  init.ld  monitor.ld  rwm.ld  session.ld  shell.ld  shutdown.ld  terminal.ld  viewer.ld  wm.ld
userland/rogue-clip/: Cargo.toml
userland/rogue-clip/src/: lib.rs
userland/rogue-lock/: README.md
userland/rogue-shot/src/: main.rs
userland/rogue-shot/tests/: smoke.rs
userland/rwm-config/: Cargo.toml
userland/rwm-config/src/: lib.rs
userland/rwm-core/: Cargo.toml
userland/rwm-core/src/: client.rs  event.rs  layout.rs  lib.rs  monitor.rs  state.rs
userland/rwm-core/tests/: client_tests.rs  event_tests.rs  layout_helper_tests.rs  layout_tests.rs  monitor_tests.rs  rect_tests.rs  state_tests.rs  tag_tests.rs
userland/rwm-desktop/: Cargo.toml
userland/rwm-desktop/src/: main.rs
userland/server/: Cargo.toml
userland/server/src/: lib.rs
userland/src/: backend_kernel.rs  kdp.rs  lib.rs  rdp.rs
userland/utils/: Cargo.toml
userland/utils/src/: lib.rs
userland/wm/: Cargo.toml
userland/wm/src/: lib.rs
(+3 files in other folders)
