[workspace]
resolver = "2"
members = [
  # Shared ABI (kernel ↔ userland)
  "lib",
  # Bare-metal kernel + bootloader
  "kernel",
  "boot",
  # Userland runtime, syscall wrappers, and system binaries
  "userland",
  "userland/core",
  "userland/compositor",
  "userland/server",
  "userland/wm",
  "userland/utils",
  "userland/rwm-core",
  "userland/rwm-desktop",
  "userland/kapp",
  # Kingdom-native graphical applications
  "apps/rogue-clip",
  "apps/rogue-lock",
  "apps/rogue-shot",
]

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true

[profile.dev]
panic = "abort"
strip = true
