[package]
name = "rogue-lock"
version = "0.1.0"
edition = "2021"
authors = ["Rogue Linux Team"]
description = "Futuristic X11 lock screen for Rogue Linux — Rogue brand aesthetic, clock, unlock indicator, PAM auth"
license-file = "LICENSE"

[dependencies]
xcb = "1.3"
cairo-rs = "0.21"
chrono = "0.4"
libpam-sys = "0.1"
libc = "0.2"
