[package]
name = "rwm-config"
version = "0.1.0"
edition = "2021"
description = "TOML configuration for roguewm — rogue-website themed defaults"
license-file = "../../LICENSE"

[dependencies]
rwm-core = { path = "../rwm-core" }
serde    = { version = "1", features = ["derive"] }
toml     = "0.8"
tracing  = "0.1"
dirs     = "6"
